[package]
name = "policies2-rust-sdk"
version = "0.1.0"
edition = "2021"
description = "Execute stored policies and flows over REST using API keys"
license = "MIT"

[dependencies]
http = "1.3"
prost = "0.14"
prost-types = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport", "tls"] }
